--- a/public/stylesheets/web-app-theme/override.css
+++ b/public/stylesheets/web-app-theme/override.css
@@ -274,6 +274,7 @@ a.button.remove_nested_fields{ color:darkred }
   border-bottom-right-radius: 9px
 }
 .breadcrumb ul {
+  padding-left: 28px;
   height: 20px;
   padding-bottom: 15px;
   padding-top: 0px;
