--- a/public/stylesheets/web-app-theme/override.css
+++ b/public/stylesheets/web-app-theme/override.css
@@ -61,9 +61,17 @@ input.button:active {
   background-color:#e5e5e5;
 }
 
-.flash .alert {
+/*.flash .alert {
   border: 1px solid #ffbbbb;
   background-color: #ffdddd;
+}
+*/
+
+.flash .alert {
+  color: #28485e;
+  text-shadow: 0 1px 0 rgba(255, 255, 255, 0.7);
+  border: 1px solid #8a9daa;
+  background: #b8d1e2 url("themes/default/images/messages/notice.png") no-repeat 10px center;
 }
 
 input.checkbox {
