landing page to have a sign in link.

--- a/app/views/public/index.html.haml
+++ b/app/views/public/index.html.haml
@@ -1,5 +1,5 @@
 
-%h2 Articles
-
-= render @articles
-
+.block
+  .content
+    .inner
+      = link_to "Log in", new_session_path(:user), :class => "signup_button round"
