moved web-app-theme fonts and images to where the stylesheets gets compiled to.

--- a/app/views/shared/_includes.html.haml
+++ b/app/views/shared/_includes.html.haml
@@ -1,4 +1,4 @@
-= stylesheet_link_tag "web-app-theme/base", "web-app-theme/themes/default/style", "web-app-theme/override", "map"
+= stylesheet_link_tag "web-app-theme/base", "web-app-theme/themes/default/style", "web-app-theme/override", "map", :cache => true
 = stylesheet_link_tag 'zoombox/zoombox'
 = stylesheet_link_tag 'token-input-facebook'
 = stylesheet_link_tag 'print', :media => 'print'
