--- a/app/stylesheets/application.sass
+++ b/app/stylesheets/application.sass
@@ -13,3 +13,11 @@
   +border-radius(5px)
   padding: 4px
   margin: 20px 0px
+
+#document_list
+  display: block
+  li
+    list-style-type: none
+    margin-left: 0px
+    margin-bottom: 4px
+  
