--- a/app/views/articles/projects.html.haml
+++ b/app/views/articles/projects.html.haml
@@ -8,5 +8,5 @@
       =render :partial => "project_summary", :collection => @projects, :as => :project
 
       #paginator
-        = paginate @projects
+        = will_paginate @projects
       %br
