--- a/app/views/locations/index.html.haml
+++ b/app/views/locations/index.html.haml
@@ -8,4 +8,4 @@
       .actions-bar.wat-cf
         .actions
           = will_paginate @locations
-      = page_entries_info
+      // = page_entries_info
