--- a/app/views/admin/dashboard/index.js.haml
+++ b/app/views/admin/dashboard/index.js.haml
@@ -1,4 +1,4 @@
 :plain
   $('#events').html("#{escape_javascript render(:partial => "event", :collection => @events)}");
   $('#projects').html("#{escape_javascript render(:partial => "project", :collection => @projects)}");
-  $('#paginator').html("#{escape_javascript(paginate(@events, :remote => true).to_s)}");
+  $('#paginator').html("#{escape_javascript(will_paginate(@events, :remote => true).to_s)}");
