--- a/app/views/shared/_user_settings.html.haml
+++ b/app/views/shared/_user_settings.html.haml
@@ -1,7 +1,3 @@
 -if user_signed_in?
-  - unless @settings.location.nil?
-    %span.setting_label= @settings.location.name
-    = link_to t(:edit_user_settings), edit_settings_path, :class => "button"
-  - else
-    %span.setting_label=t(:set_your_location_label)
-    = link_to t(:edit_user_settings), edit_settings_path, :class => "button"
+  %span.setting_label= @settings.location_name
+  = link_to t(:edit_user_settings), edit_settings_path, :class => "button"
